--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>ポケモン風ミニゲーム（完全版）</title>
+  <title>ポケモン風捕獲ゲーム</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,6 +19,7 @@
         <div class="hp-bar"><div id="playerHPBar" class="hp"></div></div>
         <div id="action-area">
           <button id="attackBtn">▶ たたかう</button>
+          <button id="ballBtn">▶ ボールで捕まえる</button>
           <button id="runBtn">▶ にげる</button>
           <p id="battle-message">戦闘開始！</p>
         </div>
