--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>ポケモン風捕獲ゲーム</title>
+  <title>ポケモン風ミニゲーム</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
